<resources>
    <string name="app_name">Kilometer</string>
    <string name="title_activity_maps">Kilometer</string>
    <string name="done">Done</string>
    <string name="pick_up">Pick Up</string>
    <string name="drop_off">Drop Off</string>
    <string name="clear">clear</string>
    <string name="my_location">My Location</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="server_key">AIzaSyBeqNH7Hb2FyX_U6Vf_GK40QL9iCvXkzsE</string>
</resources>
